--- a/deployment.yml
+++ b/deployment.yml
@@ -1,45 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dotnet-webapi
-  labels:
-    app: dotnet-webapi
+  name: dotnet-api-deployment
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: dotnet-webapi
+      app: dotnetapi
   template:
     metadata:
       labels:
-        app: dotnet-webapi
+        app: dotnetapi
     spec:
       containers:
-        - name: dotnet-webapi
-          image: deepak941.azurecr.io/dotnet-webapi:latest
-          ports:
-            - containerPort: 8080
-          env:
-            - name: ASPNETCORE_ENVIRONMENT
-              value: "Production"
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "128Mi"
-            limits:
-              cpu: "500m"
-              memory: "512Mi"
+      - name: dotnetapi
+        image: deepak941.azurecr.io/dotnetapi:v1
+        ports:
+        - containerPort: 8080
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: dotnet-webapi-service
+  name: dotnet-api-service
 spec:
-  selector:
-    app: dotnet-webapi
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
   type: LoadBalancer
+  selector:
+    app: dotnetapi
+  ports:
+  - port: 80
+    targetPort: 8080
